<resources>
    <string name="app_name">HW6</string>
    <string name="add_file">add file</string>
    <string name="txtEditor">TXT editor</string>
    <string name="file">File</string>
    <string name="fileName">File name</string>
    <string name="newFile">New file</string>
    <string name="fileNameHint">File name</string>
    <string name="Text">Enter text</string>
    <string name="createNewFile">CREATE NEW FILE</string>
    <string name="settings">Settings</string>
    <string name="editFile">Edit File</string>
    <string name="save">save</string>
    <string name="back">back</string>
    <string name="app_specific_storage">App-specific storage</string>
    <string name="sharedStorage">Shared storage</string>
    <string name="saveVariant">Save variant</string>
    <string name="enterFilename">Enter file name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="preference_file_key">IS_SHARED_STORAGE</string>
</resources>