<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/toolbarCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/add_file" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editFile"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <TextView
        android:id="@+id/fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/fileNameHint"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCreate"/>

    <EditText
        android:id="@+id/fileContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/file_background"
        android:layout_marginHorizontal="5dp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:hint="@string/Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileName" />

    <Button
        android:id="@+id/editFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="25sp"
        android:layout_marginHorizontal="5dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:background="@drawable/corners_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileContent"/>
</androidx.constraintlayout.widget.ConstraintLayout>